@@ -6,7 +6,6 @@ import com.marginallyclever.convenience.helpers.MatrixHelper;
 import com.marginallyclever.convenience.helpers.OpenGLHelper;
 import com.marginallyclever.convenience.helpers.ResourceHelper;
 import com.marginallyclever.ro3.Registry;
-import com.marginallyclever.ro3.apps.viewport.Shader;
 import com.marginallyclever.ro3.apps.viewport.ShaderProgram;
 import com.marginallyclever.ro3.apps.viewport.Viewport;
 import com.marginallyclever.ro3.factories.Lifetime;
@@ -81,9 +80,6 @@ public class DrawBoundingBoxes extends AbstractRenderPass {
     }
 
     @Override
-    public void dispose(GLAutoDrawable glAutoDrawable) {}
-
-    @Override
     public void draw(Viewport viewport, GL3 gl3) {
         Camera camera = viewport.getActiveCamera();
         if(camera==null) return;
@@ -109,7 +105,7 @@ public class DrawBoundingBoxes extends AbstractRenderPass {
         var list = Registry.selection.getList();
         var toScan = new ArrayList<>(Registry.getScene().getChildren());
         while(!toScan.isEmpty()) {
-            Node node = toScan.remove(0);
+            Node node = toScan.removeFirst();
             toScan.addAll(node.getChildren());
 
             if(!(node instanceof MeshInstance meshInstance)) continue;
